Replace deprecated URL constructor in FeedParserBolt